docs/manifests/network-policy-allow-from-todo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-todo
spec:
  podSelector:
    matchLabels:
      app: todo-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: todo
          namespaceSelector:
            matchLabels:
              name: app
              tier: api
      ports:
        - protocol: TCP
          port: 5432
